# snowpack

./: .gitignore  README.txt
Documents/cmake files for ECMWF/: CMakeLists.txt  FindMeteoIO.cmake
Source/alpine3d/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  Readme.md  Readme.txt  Welcome.txt  alpine3d.lsm  run.sh
Source/alpine3d/alpine3d/: Alpine3D.h  AlpineControl.cc  AlpineControl.h  AlpineMain.cc  AlpineMain.h  CMakeLists.txt  DataAssimilation.cc  DataAssimilation.h  Glaciers.cc  Glaciers.h  MPIControl.cc  MPIControl.h  MainPage.h  MeteoObj.cc  MeteoObj.h  OMPControl.cc  OMPControl.h  SnowDrift2D.cc  SnowDrift2D.h  SnowpackInterface.cc  SnowpackInterface.h  SnowpackInterfaceWorker.cc  SnowpackInterfaceWorker.h  TechSnow.cc  TechSnow.h  TechSnowA3D.cc  TechSnowA3D.h  config.dox
Source/alpine3d/alpine3d/ebalance/: CMakeLists.txt  EBParam.ini  EBParam_description.txt  EBStruct.h  EnergyBalance.cc  EnergyBalance.h  Makefile.inc  README_FOR_RADIATIONBALANCE  RadiationField.cc  RadiationField.h  SnowBRDF.cc  SnowBRDF.h  SolarPanel.cc  SolarPanel.h  TerrainRadiation.cc  TerrainRadiation.h  TerrainRadiationAlgorithm.cc  TerrainRadiationAlgorithm.h  TerrainRadiationComplex.cc  TerrainRadiationComplex.h  TerrainRadiationHelbig.cc  TerrainRadiationHelbig.h  TerrainRadiationPETSc.cc  TerrainRadiationPETSc.h  TerrainRadiationSimple.cc  TerrainRadiationSimple.h  VFSymetricMatrix.h  ViewFactors.cc  ViewFactors.h  ViewFactorsAlgorithm.h  ViewFactorsCluster.cc  ViewFactorsCluster.h  ViewFactorsHelbig.cc  ViewFactorsHelbig.h  ViewFactorsSectors.cc  ViewFactorsSectors.h
Source/alpine3d/alpine3d/icons/: Alpine3D.icns  alpine3d.rc.in
Source/alpine3d/alpine3d/runoff/: CMakeLists.txt  Makefile.inc  Runoff.cc  Runoff.h
Source/alpine3d/alpine3d/snowdrift/: CMakeLists.txt  Cell.cc  Cell.h  Makefile.inc  Saltation.cc  SnowDrift.cc  SnowDrift.h  SnowDriftFEControl.cc  SnowDriftFEInit.cc  SnowDriftFENumerics.cc  Sublimation.cc  Suspension.cc  checksum.cc  checksum.h
Source/alpine3d/doc/: doxgen.config  io_ref.ini  landuse.txt
Source/alpine3d/doc/images/: 2d_interpolations.eps  2d_interpolations.fig  DEM.eps  LUS.eps  catchments.eps  data_strategies.eps  data_strategies.fig  distributed_sn.eps  distributed_sn.fig  ebalance.eps  ebalance.fig  mpi_scaling.agr  mpi_scaling.eps  runoff.eps  runoff.fig  simulation_workflow.eps  simulation_workflow.fig  snowdrift.eps  snowdrift.fig  soil.eps  soil.fig  (+3 more)
Source/alpine3d/inishell-apps/: alpine3d.xml  alpine3d_ebalance.xml  alpine3d_grids_output.xml  alpine3d_params.xml  alpine3d_techsnow.xml
Source/alpine3d/tests/: CMakeLists.txt  SnExtract.sh  bash_suppressions.txt  startScript.sh  startScriptCoverage.cmake  startScriptNightly.cmake  startScriptValgrind.cmake
Source/alpine3d/tools/: RunA3D.xrsl  alpine3d.plist.in  glaciers.cc  manifest.xml  pt_extract.cc  startA3D
Source/meteoio/: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Dockerfile  Readme.md  Readme.txt  cmake_install.cmake  cmake_uninstall.cmake  meteoio.lsm
Source/meteoio/applications/: CMakeLists.txt  getopt.c  getopt.h  getopt_long.c  meteoio_timeseries.cc
Source/meteoio/doc/: SMET_specifications.tex
Source/meteoio/inishell-apps/: meteoio.xml  meteoio_1dGridInterpolations.xml  meteoio_1dInterpolations.xml  meteoio_2dInterpolations.xml  meteoio_filters.xml  meteoio_general.xml  meteoio_generators.xml  meteoio_grids_input.xml  meteoio_grids_output.xml  meteoio_input_data_editing.xml  meteoio_parametergroups.xml  meteoio_spatial_resampling.xml  meteoio_timeseries_input.xml  meteoio_timeseries_output.xml  workflow_meteoio.xml
Source/meteoio/meteoio/: CMakeLists.txt  Config.cc  Config.h  DataCreator.cc  DataCreator.h  DataEditing.cc  DataEditing.h  DataEditingAlgorithms.cc  DataEditingAlgorithms.h  DataGenerator.cc  DataGenerator.h  FStream.cc  FStream.h  FileUtils.cc  FileUtils.h  GeneratorAlgorithms.cc  Graphics.cc  Graphics.h  Grid1DInterpolator.cc  Grid1DInterpolator.h  GridProcessor.cc  GridProcessor.h  GridsManager.cc  GridsManager.h  IOExceptions.cc  IOExceptions.h  IOHandler.cmake.cc  IOHandler.h  IOInterface.cc  IOInterface.h  IOManager.cc  IOManager.h  IOUtils.cc  IOUtils.h  InterpolationAlgorithms.cc  InterpolationAlgorithms.h  MainPage.h  MathOptim.h  MessageBoxX11.cc  MessageBoxX11.h  (+18 more)
Source/meteoio/tests/: CMakeLists.txt  coordinates.cc  data_converter.cc  io.ini  matrix.cc  startScript.sh  startScriptValgrind.cmake  time.cc
Source/meteoio/tools/: getSynop.sh  gracerc  manifest.xml  meteoio.plist  meteoio.plist.in  resample_smetdata.sh  smet2agr.sh  smet2kml.sh  smet_extract.sh  smet_file_parser.R  smet_file_parser.py  smet_file_parser.r  smet_range.sh  smet_select.sh  smet_split.sh
Source/snowpack/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Readme.md  cmake_install.cmake  cmake_uninstall.cmake  compile_commands.json  snowpack.lsm
Source/snowpack/inishell-apps/: snowpack.xml  snowpack_advanced.xml  snowpack_extra_input.xml  snowpack_output.xml  snowpack_params.xml  snowpack_seaice.xml  snowpack_techsnow.xml  workflow_snowpack.xml
Source/snowpack/snowpack/: CMakeLists.txt  Constants.h  DataClasses.cc  DataClasses.h  Hazard.cc  Hazard.h  Laws_sn.cc  Laws_sn.h  MainPage.h  Meteo.cc  Meteo.h  Saltation.cc  Saltation.h  SnowDrift.cc  SnowDrift.h  SnowpackConfig.cc  SnowpackConfig.h  Stability.cc  Stability.h  StabilityAlgorithms.cc  StabilityAlgorithms.h  TechnicalSnow.cc  TechnicalSnow.h  Utils.cc  Utils.h  cmake_install.cmake  config.dox  libsnowpack.h  vanGenuchten.cc  vanGenuchten.h
Source/snowpack/tests/: CMakeLists.txt  startScript.sh  startScriptValgrind.cmake
Source/snowpack/tools/: create_sno_from_profile.sh  create_sno_from_profile_oldawk.sh  cut_pro_file.sh  cut_smet_file.sh  energybalancecheck.sh  extract_profile.sh  extract_timeseries.sh  manifest.xml  massbalancecheck.sh  reduce_pro_file.sh  snowpack.plist.in  timeshift_pro_files.sh  timeshift_smet_files.sh  timeshift_sno_files.sh  timeshift_sno_files_oldawk.sh
(+1091 files in other folders)
